QMetaObjectBuilder: add assert to setParameterNames()

Amends 58b4be482cb481addebc966d713bc0521cca3218; we have:
QList<QByteArray> paramNames = method.parameterNames;

The above commit changed the code from:
while (paramNames.size() < paramCount)
    paramNames.append(QByteArray());
for (int i = 0; i < paramCount; ++i)

To:
if (paramNames.size() < paramCount) // (paraphrased for brevity)
    paramNames.resize(paramCount);
for (auto &foo : paramNames)

Calling something like this:
methodBuilder = builder.addSlot("foo(int)");
methodBuilder.setParameterNames({"", "i"});

Worked with the code before that commit, where it just used the first
element in `paramNames` and didn't look at the second one at all.

The new for-loop, `for (auto &foo : paramNames)`, iterated
paraNames.size() times, which led to the `dataIndex` being off by one.
Which would eventually hit an assert in buildMetaObject():
Q_ASSERT(!buf || dataIndex == pmeta->propertyData);

Friedemann Kleint debugged the issue in the bug report, so this patch
applies his suggestion of adding an assert in setParameterNames(), right
where the bug actually happens, because the assert in buildMetaObject()
makes it hard to connect the dots and fix the actual bug in user code.

Fixes: QTBUG-139845
Done-with: Friedemann Kleint <Friedemann.Kleint@qt.io>
Change-Id: Icd355241834396c1c8659df621d0f785ef0cceee
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit db2bbbb251c041b37d529e5722c4f4a244988857)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>